force-app/main/default/objects/Master_Data_Load__c/Master_Data_Load__c.object-meta.xml
<CustomObject>
    <label>Master Data Load</label>
    <nameField>
        <displayFormat>MDL-{0000}</displayFormat>
        <label>Master Data Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Data Load</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>