force-app/main/default/objects/Master_Data_Load__c/fields/FIN_Payment_Distribution_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment_Distribution_Process_Status__c</fullName>
    <formula>Payment_Distribution__r.Process_Status_Image_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Distribution Process Status</label>
    <type>Text</type>
</CustomField>