force-app/main/default/objects/Master_Data_Load__c/fields/FIN_Sales_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Sales_Process_Status__c</fullName>
    <formula>Sales__r.Process_Status_Image_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Process Status</label>
    <type>Text</type>
</CustomField>