force-app/main/default/objects/Master_Data_Load__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Load</label>
    <referenceTo>FIN_SystemDataLoadLog__c</referenceTo>
    <relationshipLabel>Master Data Load</relationshipLabel>
    <relationshipName>Master_Data_Load_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>