force-app/main/default/objects/Master_Data_Load__c/fields/Payment_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Payment_Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Distribution Load</label>
    <referenceTo>FIN_SystemDataLoadLog__c</referenceTo>
    <relationshipLabel>Master Data Load (Payment Distribution)</relationshipLabel>
    <relationshipName>Master_Data_Load1</relationshipName>
    <type>Lookup</type>
</CustomField>