force-app/main/default/objects/Master_Data_Load__c/fields/Payment_Distribution_Load_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Distribution_Load_Status__c</fullName>
    <formula>Payment_Distribution__r.Process_Status_Image_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Distribution Load Status</label>
    <type>Text</type>
</CustomField>