force-app/main/default/objects/Master_Data_Load__c/fields/ProcessDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessDate__c</fullName>
    <label>ProcessDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>