force-app/main/default/objects/Master_Data_Load__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Load</label>
    <referenceTo>FIN_SystemDataLoadLog__c</referenceTo>
    <relationshipLabel>Master Data Load (Sales)</relationshipLabel>
    <relationshipName>Master_Data_Load</relationshipName>
    <type>Lookup</type>
</CustomField>