force-app/main/default/objects/Master_Data_Load__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessDate__c</columns>
    <columns>FIN_Region__c</columns>
    <columns>Sales__c</columns>
    <columns>FIN_Sales_Process_Status__c</columns>
    <columns>Payment__c</columns>
    <columns>FIN_Payment_Process_Status__c</columns>
    <columns>Payment_Distribution__c</columns>
    <columns>FIN_Payment_Distribution_Process_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>